--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "start": "babel-node src/run.js",
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
     "test": "npm run nyc && npm run cucumber",
-    "nyc": "nyc --require babel-register --require babel-polyfill cucumber-js __tests__",
+    "nyc": "npm run restoredb && nyc --require babel-register --require babel-polyfill cucumber-js __tests__",
     "cucumber": "npm run cucumber:html && npm run cucumber:xml",
     "cucumber:html": "cucumber-js __tests__ --require-module babel-register --format=json | tee .test_output/cucumber.json && babel-node cucumberReport.js",
     "cucumber:xml": "cucumber-js __tests__ --require-module babel-register --format=json | cucumber-junit > .test_output/cucumber/cucumber.xml",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
-    "gulp": "babel-node cucumberReport.js"
+    "gulp": "babel-node cucumberReport.js",
+    "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
+    "migrate:undo": "sequelize db:migrate:undo:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
+    "seeders": "sequelize db:seed:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
+    "restoredb": "npm run migrate:undo && npm run migrate && npm run seeders"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
