Correção de quebra de build

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm run nyc && npm run cucumber",
     "nyc": "npm run restoredb && nyc --require babel-register --require babel-polyfill cucumber-js __tests__",
     "cucumber": "npm run cucumber:html && npm run cucumber:xml",
-    "cucumber:html": "cucumber-js __tests__ --require-module babel-register --format=json | tee .test_output/cucumber.json && babel-node cucumberReport.js",
-    "cucumber:xml": "cucumber-js __tests__ --require-module babel-register --format=json | cucumber-junit > .test_output/cucumber/cucumber.xml",
+    "cucumber:html": "cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json | tee .test_output/cucumber.json && babel-node cucumberReport.js",
+    "cucumber:xml": "cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json | cucumber-junit > .test_output/cucumber/cucumber.xml",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
     "gulp": "babel-node cucumberReport.js",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
