--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "scripts": {
     "start": "babel-node src/run.js",
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
-    "test": "npm run nyc && npm run cucumber",
-    "nyc": "npm run restoredb && nyc --require babel-register --require babel-polyfill cucumber-js __tests__",
-    "cucumber": "npm run cucumber:html && npm run cucumber:xml",
-    "cucumber:html": "cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json | tee .test_output/cucumber.json && babel-node cucumberReport.js",
-    "cucumber:xml": "cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json | cucumber-junit > .test_output/cucumber/cucumber.xml",
+    "test": "npm run nyc && npm run cucumber:json && npm run cucumber:report",
+    "nyc": "npm run restoredb && nyc cucumber-js __tests__",
+    "cucumber:json": "npm run restoredb && cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json >> .test_output/cucumber.json",
+    "cucumber:report": "babel-node cucumberReport.js && cat .test_output/cucumber.json | cucumber-junit > .test_output/cucumber/cucumber.xml",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
-    "gulp": "babel-node cucumberReport.js",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "migrate:undo": "sequelize db:migrate:undo:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "seeders": "sequelize db:seed:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
@@ -51,6 +49,10 @@
     "branches": 50,
     "include": [
       "src/**/*.js"
+    ],
+    "require": [
+      "babel-register",
+      "babel-polyfill"
     ],
     "exclude": [
       "src/helpers/error.js",
