--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "start": "babel-node src/run.js",
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
-    "test": "npm run nyc && npm run cucumber:json && npm run cucumber:report",
+    "test": "npm run nyc && npm run cucumber && npm run cucumber:report",
     "nyc": "npm run restoredb && nyc cucumber-js __tests__",
-    "cucumber:json": "npm run restoredb && cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json >> .test_output/cucumber.json",
+    "cucumber": "npm run restoredb && cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json >> .test_output/cucumber.json",
     "cucumber:report": "babel-node cucumberReport.js && cat .test_output/cucumber.json | cucumber-junit > .test_output/cucumber/cucumber.xml",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
