--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "pm2 start --interpreter babel-node src/run.js",
+    "dev": "babel-node src/run.js",
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
     "test": "npm run nyc && npm run cucumber && npm run cucumber:report",
     "nyc": "npm run restoredb && nyc cucumber-js __tests__",
@@ -38,6 +39,7 @@
     "global": "^4.3.2",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
+    "pg": "^7.4.3",
     "pm2": "^2.10.3",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0"
