Ajuste pendente para os testes do cucumber

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "babel-node src/run.js",
     "dev": "babel-node src/run.js",
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
-    "test": "NODE_ENV=test npm run nyc && npm run cucumber && npm run cucumber:report",
+    "test": "babel-node cucumberReport.js",
+    "test2": "npm run nyc && npm run cucumber && npm run cucumber:report",
     "nyc": "npm run restoredb && nyc cucumber-js __tests__",
     "cucumber": "npm run restoredb && cucumber-js __tests__ --require-module babel-register --require-module babel-polyfill --format=json >> .test_output/cucumber.json",
     "cucumber:report": "babel-node cucumberReport.js && cat .test_output/cucumber.json | cucumber-junit > .test_output/cucumber/cucumber.xml",
