--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon --watch src --exec babel-node src/run.js",
     "test": "node before.test.js && npm run mockdb && npm run nyc && node cucumber.report.js",
     "nyc": "nyc cucumber-js __tests__ --format=json >> cucumber.json",
+    "cucumber": "node before.test.js && npm run mockdb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "migrate:undo": "sequelize db:migrate:undo:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
