--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "pg": "^7.4.3",
     "pm2": "^2.10.3",
     "sequelize": "^4.37.6",
-    "sequelize-cli": "^4.0.0"
+    "sequelize-cli": "^4.0.0",
+    "sha1": "^1.1.1"
   },
   "nyc": {
     "check-coverage": true,
