Obter questões compartilhadas por outros usuários

--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "migrate:undo": "sequelize db:migrate:undo:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "seeders": "sequelize db:seed:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
-    "mockdb": "npm run migrate && npm run seeders"
+    "mockdb": "npm run migrate && npm run seeders",
+    "restoredb": "node before.test.js && npm run migrate && npm run seeders"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.1",
     "cucumber": "^4.2.1",
@@ -33,6 +32,9 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
@@ -40,7 +42,6 @@
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
-    "pm2": "^2.10.3",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
     "sha1": "^1.1.1"
