--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
+    "boom": "^7.2.0",
     "express": "^4.16.3",
     "global": "^4.3.2",
+    "http-status": "^1.1.2",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
