Finalizando testes de sincronização da Api

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
   "nyc": {
     "check-coverage": true,
     "per-file": true,
-    "lines": 50,
-    "statements": 50,
-    "functions": 50,
-    "branches": 50,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80,
     "include": [
       "src/**/*.js"
     ],
@@ -68,7 +68,8 @@
       "src/helpers/error.js",
       "src/auth/auth.js",
       "src/server.js",
-      "src/socket"
+      "src/socket",
+      "src/infra/db/models/index.js"
     ],
     "reporter": [
       "text",
