--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "node before.test.js && npm run mockdb && npm run nyc && node cucumber.report.js",
     "nyc": "nyc cucumber-js __tests__ --format=json >> cucumber.json",
     "cucumber": "node before.test.js && npm run mockdb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
+    "cucumber:postgres": "npm run restoredb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
     "migrate:undo": "sequelize db:migrate:undo:all --config=./src/infra/config.js --options-path=./src/infra/options.json",
@@ -53,10 +54,10 @@
   "nyc": {
     "check-coverage": true,
     "per-file": true,
-    "lines": 0,
-    "statements": 0,
-    "functions": 0,
-    "branches": 0,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80,
     "include": [
       "src/**/*.js"
     ],
