--- a/client/proxyconfig.json
+++ b/client/proxyconfig.json
@@ -3,5 +3,10 @@
     "target": "http://0.0.0.0:3000",
     "secure": false,
     "changeOrigin": true
+  },
+  "/socket.io": {
+    "target": "http://0.0.0.0:3000",
+    "secure": false,
+    "changeOrigin": true
   }
 }
