--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
-    "boom": "^7.2.0",
+    "dropbox": "^2.5.12",
     "express": "^4.16.3",
     "global": "^4.3.2",
     "google-auth-library": "^1.6.1",
     "http-status": "^1.1.2",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "pg": "^7.4.3",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
@@ -71,7 +72,8 @@
       "src/server.js",
       "src/socket",
       "src/infra/db/models/index.js",
-      "src/controllers/google.js"
+      "src/controllers/google.js",
+      "src/controllers/image.js"
     ],
     "reporter": [
       "text",
