--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
+    "sweetalert2": "^7.25.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
