Ajuste no envio de notificações

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     ],
     "exclude": [
       "src/helpers/error.js",
+      "src/helpers/utils.js",
       "src/auth/auth.js",
       "src/server.js",
       "src/socket",
