#137, #145, #146 - Tela do quiz e integrações

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "__dirname": true,
     "process": true,
     "setTimeout": true,
+    "setInterval": true,
     "Promise": true
   },
   "parserOptions": {
