--- a/client/angular.json
+++ b/client/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/intro.js/introjs.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/intro.js/minified/intro.min.js"
+            ]
           },
           "configurations": {
             "production": {
