--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@ngx-loading-bar/http-client": "^2.0.0",
+    "@types/intro.js": "^2.4.3",
     "angular2-image-upload": "^1.0.0-rc.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "intro.js": "^2.9.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
     "sweetalert2": "^7.25.0",
