--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "sequelize-cli": "^4.0.0",
     "sha1": "^1.1.1",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "swagger-ui-express": "^3.0.10"
   },
   "nyc": {
     "check-coverage": true,
