--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "angular2-image-upload": "^1.0.0-rc.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "highcharts": "^6.1.1",
+    "highcharts-angular": "^2.0.2",
     "intro.js": "^2.9.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
