--- a/client/react/package.json
+++ b/client/react/package.json
@@ -21,9 +21,15 @@
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "babel-loader": "7",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-router-dom": "^4.3.1",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.0.0",
+    "ttf-loader": "^1.0.2"
   }
 }
