--- a/client/react/package.json
+++ b/client/react/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "7",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "history": "^4.7.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
