--- a/client/react/package.json
+++ b/client/react/package.json
@@ -26,9 +26,11 @@
     "history": "^4.7.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.1",
     "style-loader": "^0.23.1",
     "styled-components": "^4.0.0",
     "ttf-loader": "^1.0.2"
