--- a/client/react/package.json
+++ b/client/react/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "babel-loader": "7",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
+    "image-webpack-loader": "^4.4.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
