--- a/client/react/package.json
+++ b/client/react/package.json
@@ -4,24 +4,20 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "react-hot-loader": "^4.3.7",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
-  },
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "babel-loader": "7",
+    "babel-loader": "7",    
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
@@ -33,8 +29,12 @@
     "react-sidebar": "^3.0.2",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.0.0",
+    "sweetalert-react": "^0.4.11",
+    "sweetalert2-react": "^0.7.2",
     "ttf-loader": "^1.0.2"
   }
 }
