--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "babel-node src/run.js",
-    "devstart": "nodemon --watch src --exec babel-node src/run.js",
+    "dev": "concurrently \"nodemon --watch src --exec babel-node src/run.js\" \"node start-client.js\"",
     "test": "node before.test.js && npm run mockdb && npm run nyc && node cucumber.report.js",
     "nyc": "nyc cucumber-js __tests__ --format=json >> cucumber.json",
     "cucumber": "node before.test.js && npm run mockdb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "concurrently": "^4.1.0",
     "coveralls": "^3.0.1",
     "cucumber": "^4.2.1",
     "cucumber-html": "^0.2.4",
