--- a/client/react/package.json
+++ b/client/react/package.json
@@ -8,6 +8,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
     "react-hot-loader": "^4.3.7",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
