--- a/client/react/package.json
+++ b/client/react/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "test": "jest --runInBand --coverage"
+    "test": "cross-env NODE_ENV=jest jest --runInBand",
+    "test-cov": "cross-env NODE_ENV=jest jest --runInBand --coverage"
+  },
+  "dependencies": {
+    "react-moment": "^0.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -12,6 +16,7 @@
     "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
@@ -23,13 +28,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.3.7",
-    "react-moment": "^0.9.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-sidebar": "^3.0.2",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.1",
