--- a/client/react/package.json
+++ b/client/react/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -8,8 +9,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
+    "jest": "^24.8.0",
     "react-hot-loader": "^4.3.7",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
@@ -23,7 +27,6 @@
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
-    "image-webpack-loader": "^4.4.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-moment": "^0.9.2",
@@ -36,8 +39,6 @@
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.0.0",
-    "sweetalert-react": "^0.4.11",
-    "sweetalert2-react": "^0.7.2",
     "ttf-loader": "^1.0.2"
   }
 }
