--- a/client/react/package.json
+++ b/client/react/package.json
@@ -1,43 +1,41 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "test": "jest --runInBand --coverage"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
+    "file-loader": "^3.0.1",
+    "history": "^4.9.0",
+    "jest": "^24.8.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-hot-loader": "^4.3.7",
-    "webpack": "^4.18.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
-  },
-  "dependencies": {
-    "@material-ui/core": "^3.0.3",
-    "@material-ui/icons": "^3.0.1",
-    "axios": "^0.18.0",
-    "babel-loader": "7",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "history": "^4.7.2",
-    "image-webpack-loader": "^4.4.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
     "react-moment": "^0.9.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
     "react-sidebar": "^3.0.2",
-    "reactstrap": "^6.4.0",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
-    "styled-components": "^4.0.0",
-    "sweetalert-react": "^0.4.11",
-    "sweetalert2-react": "^0.7.2",
-    "ttf-loader": "^1.0.2"
+    "styled-components": "^4.2.1",
+    "ttf-loader": "^1.0.2",
+    "webpack": "^4.18.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
