Migrar tela de questões compartilhadas para react hooks

--- a/client/react/.eslintrc
+++ b/client/react/.eslintrc
@@ -16,7 +16,8 @@
     "beforeAll": "readonly",
     "window": "readonly",
     "localStorage": "readonly",
-    "jest": "readonly"
+    "jest": "readonly",
+    "document": "readonly"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
