--- a/client/react/package.json
+++ b/client/react/package.json
@@ -9,8 +9,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.5",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
