Tela do quiz em que o usuário pode responder as questões

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,5 +2,5 @@ NODE_ENV=test
 SECRET=1234567890
 GOOGLE_SECRET=01234567890
 DROPBOX_TOKEN=dropbox_token
-DATABASE_URL=database_url
+DATABASE_URL=postgres://USERNAME:PASSWORD@127.0.0.1:5432/DATABASE
 PORT=3000
