Adicionado lib para socket.io

--- a/client/react/.eslintrc
+++ b/client/react/.eslintrc
@@ -18,7 +18,8 @@
     "localStorage": "readonly",
     "jest": "readonly",
     "document": "readonly",
-    "location": "readonly"
+    "location": "readonly",
+    "navigator": "readonly"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
