--- a/client/react/package.json
+++ b/client/react/package.json
@@ -40,6 +40,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.0.5",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.1",
     "ttf-loader": "^1.0.2",
