--- a/client/react/package.json
+++ b/client/react/package.json
@@ -35,12 +35,13 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-sidebar": "^3.0.2",
+    "react-testing-library": "^8.0.1",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
     "redux-saga": "^1.0.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.1",
     "ttf-loader": "^1.0.2",
