--- a/client/react/package.json
+++ b/client/react/package.json
@@ -31,6 +31,7 @@
     "jest": "^24.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^3.21.7",
     "react-hot-loader": "^4.3.7",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
