Exportar questões do usuário para arquivo json
Signed-off-by: Gabriel Santos <gabrielsantoscimol@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,8 @@
     "process": true,
     "setTimeout": true,
     "setInterval": true,
-    "Promise": true
+    "Promise": true,
+    "require": true
   },
   "parserOptions": {
     "ecmaVersion": 8,
