Refactory no processo de build e deploy

--- a/package.json
+++ b/package.json
@@ -83,5 +83,10 @@
       "html"
     ],
     "report-dir": "./.test_output/coverage"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   }
 }
