--- a/client/react/package.json
+++ b/client/react/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --config ./webpack.config.js --mode production",
     "test": "cross-env NODE_ENV=jest jest --runInBand",
     "test-cov": "cross-env NODE_ENV=jest jest --runInBand --coverage"
   },
@@ -22,6 +23,7 @@
     "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
@@ -30,7 +32,9 @@
     "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "history": "^4.9.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "progress-bar-webpack-plugin": "^1.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hook-form": "^3.21.7",
