--- a/client/react/package.json
+++ b/client/react/package.json
@@ -2,8 +2,9 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
+    "build:dev": "webpack --config ./webpack.config.js --mode development",
     "test": "cross-env NODE_ENV=jest jest --runInBand",
-    "test-cov": "cross-env NODE_ENV=jest jest --runInBand --coverage"
+    "test:cov": "cross-env NODE_ENV=jest jest --runInBand --coverage"
   },
   "dependencies": {
     "react-moment": "^0.9.2",
