Migrated to TypeScript - Acount and Log

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "name": "educational-rooms",
   "version": "2.0.0",
   "scripts": {
-    "start": "babel-node lib/run.js",
+    "start": "nodemon --watch src --exec ts-node src/run.ts",
     "build": "babel src --out-dir lib --copy-files",
     "api": "nodemon --watch src --exec babel-node src/run.js",
     "start:dev": "concurrently \"nodemon --watch src --exec babel-node src/run.js\" \"node start-client.js\"",
     "test": "node before.test.js && npm run mockdb && npm run nyc && node cucumber.report.js",
     "nyc": "nyc cucumber-js __tests__ --format=json >> cucumber.json",
-    "cucumber": "node before.test.js && npm run mockdb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
+    "cucumber": "node before.test.js && npm run mockdb && cucumber-js __tests__",
     "cucumber:postgres": "npm run restoredb && cucumber-js --require-module babel-register --require-module babel-polyfill __tests__",
     "lint": "eslint -c .eslintrc . --ignore-path .eslintignore",
     "migrate": "sequelize db:migrate --config=./src/infra/config.js --options-path=./src/infra/options.json",
@@ -19,49 +19,52 @@
     "restoredb": "node before.test.js && npm run migrate:undo && npm run migrate && npm run seeders"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "concurrently": "^4.1.0",
-    "coveralls": "^3.0.1",
-    "cucumber": "^4.2.1",
+    "@types/chai": "^4.3.5",
+    "@types/cucumber": "^7.0.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.1.3",
+    "@types/sha1": "^1.1.3",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.7",
+    "concurrently": "^8.0.1",
+    "coveralls": "^3.1.1",
     "cucumber-html": "^0.2.4",
-    "cucumber-html-reporter": "^4.0.2",
+    "cucumber-html-reporter": "^6.0.0",
     "cucumber-junit": "^1.7.1",
-    "dotenv": "^5.0.1",
-    "eslint": "^4.19.1",
-    "nodemon": "^1.17.4",
-    "nyc": "^11.7.1",
-    "rimraf": "^2.6.2",
-    "sqlite3": "^4.0.8",
-    "supertest": "^3.0.0"
+    "cucumber-tsflow": "^4.0.0-rc.7",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.38.0",
+    "nodemon": "^2.0.22",
+    "nyc": "^15.1.0",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "body-parser": "^1.18.2",
-    "dropbox": "^2.5.12",
-    "express": "^4.16.3",
-    "global": "^4.3.2",
-    "google-auth-library": "^1.6.1",
-    "http-status": "^1.1.2",
-    "jsonwebtoken": "^8.2.1",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.0",
-    "pg": "^7.4.3",
-    "sequelize": "^4.37.6",
-    "sequelize-cli": "^4.0.0",
+    "body-parser": "^1.20.2",
+    "dropbox": "^10.34.0",
+    "express": "^4.18.2",
+    "global": "^4.4.0",
+    "google-auth-library": "^8.7.0",
+    "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.10.0",
+    "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0",
     "sha1": "^1.1.1",
-    "socket.io": "^2.1.1",
-    "swagger-ui-express": "^3.0.10"
+    "socket.io": "^4.6.1"
   },
   "nyc": {
     "check-coverage": true,
     "per-file": true,
-    "lines": 80,
-    "statements": 80,
-    "functions": 80,
-    "branches": 80,
+    "lines": 3,
+    "statements": 3,
+    "functions": 3,
+    "branches": 3,
     "include": [
       "src/**/*.js"
     ],
@@ -85,10 +88,5 @@
       "html"
     ],
     "report-dir": "./.test_output/coverage"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
   }
 }
